--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upfrontfresh",
+  "name": "upfront",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -9,13 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.30",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "expo": "^54.0.30",
+    "expo-apple-authentication": "~8.0.8",
+    "expo-asset": "~12.0.12",
+    "expo-auth-session": "~7.0.10",
+    "expo-crypto": "~15.0.8",
+    "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-local-authentication": "~17.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-worklets": "^0.5.1",
+    "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "^54.0.9",
     "typescript": "~5.9.2"
   },
   "private": true
