--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.45.0",
     "expo": "^54.0.30",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
     "expo-auth-session": "~7.0.10",
+    "expo-clipboard": "~8.0.8",
     "expo-crypto": "~15.0.8",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
@@ -26,6 +29,8 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-worklets": "^0.5.1",
     "react-native-worklets-core": "^1.6.2"
