--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.45.0",
+    "base-64": "^1.0.0",
     "expo": "^54.0.30",
     "expo-apple-authentication": "~8.0.8",
     "expo-asset": "~12.0.12",
@@ -21,6 +22,7 @@
     "expo-clipboard": "~8.0.8",
     "expo-crypto": "~15.0.8",
     "expo-haptics": "~15.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-local-authentication": "~17.0.8",
